# fin-arb

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  claude-code-prompt.md  pyproject.toml  technical-spec.md
backend/: config.py  database.py  main.py
backend/integrations/: espn.py  kalshi.py  odds_api.py  polymarket.py  weather.py
backend/migrations/: env.py
backend/migrations/versions/: 2deb4780f39b_add_external_event_id_to_events.py  6212a9c22222_add_direction_column_to_signals.py  a742ecc66dc3_initial_schema.py  dcf07fbc0dc2_add_outcome_name_to_market_lines.py  (+1 more)
backend/models/: __init__.py  estimate.py  event.py  market_line.py  outcome.py  signal.py  slate.py  suggested_estimate.py  transcript.py
backend/routers/: composer.py  edge.py  estimates.py  events.py  lines.py  signals.py  slates.py  sports.py  tracking.py  transcripts.py
backend/schemas/: composer.py  confidence_scorer.py  edge.py  estimate.py  event.py  market_anchor.py  market_line.py  outcome.py  signal.py  signal_aggregator.py  slate.py  sports.py  structural_priors.py  transcript.py
backend/services/: composer.py  confidence_scorer.py  edge_service.py  estimate_service.py  event_service.py  line_service.py  market_anchor.py  signal_aggregator.py  signal_service.py  slate_service.py  sports_service.py  stats_provider.py  structural_priors.py  tracking_service.py  transcript_service.py
backend/tests/: conftest.py
backend/utils/: edge_calculator.py  kelly.py  odds_converter.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/fin_arb/: main.py
(+47 files in other folders)
