[project]
name = "fin-arb"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "httpx",
    "pandas",
    "numpy",
    "openpyxl",
    "ipykernel",
    "requests",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "anthropic",
    "yt-transcriber @ git+https://github.com/hrm619/yt_transcriber.git",
    "cryptography>=46.0.6",
]

[project.scripts]
fin-arb = "fin_arb.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
